--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/OrlandoAdrianCalciu/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "parcel": "^2.7.0",
+    "parcel": "^2.0.0-rc.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -26,8 +26,5 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "redux": "^4.2.0"
-  },
-  "devDependencies": {
-
   }
 }
