--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "axios": "^0.27.2",
-    "parcel": "^2.0.0-rc.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -27,5 +26,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "redux": "^4.2.0"
+  },
+  "devDependencies": {
+    "parcel": "^2.7.0"
   }
 }
