--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
